Made all commands in social.js work with parser2, eliminated hyphens.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -667,7 +667,7 @@ CmdUtils.makeSearchCommand({
       
       var previewData = {
     	    results: data.feed.entry,
-          query: directObject.summary,
+          query: object.summary,
           numresults: data.feed['openSearch$totalResults']['$t']
       };
             
