Updated web content to reflect new command names

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -21,7 +21,7 @@
 
   <br clear="all"/>
   <div style="text-align:center;">
-    <p>You can get to this page at any time using the "command-list" command.</p>
+    <p>You can get to this page at any time using the "list ubiquity commands" command.</p>
     <p>
       You have <span id="num-commands"></span> commands in
       <span id="num-subscribed-feeds"></span> command feeds. |
