--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -119,7 +119,7 @@
 
   <br clear="all"/>
   <div style="text-align:center;">
-    <p>You can get to this page at any time using the "command-editor" command.</p>
+    <p>You can get to this page at any time using the "write ubiquity commands" command.</p>
   </div>
   <br clear="all"/>
 
