--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -28,7 +28,7 @@
 
   <br clear="all"/>
   <div style="text-align:center;">
-    <p>You can get to this page at any time using the "settings" command.</p>
+    <p>You can get to this page at any time using the "change ubiquity settings" command.</p>
   </div>
   <br clear="all"/>
 
