Added parser playpen link to web content, on development page.

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -227,6 +227,10 @@
   <p>Help us test our <a href="feed.html#experimental-commands.html">
     experimental commands</a>!</p>
 
+  <p>Experiment with parser performance in the
+    <a href="chrome://parser-demo/content/index.html">parser playpen</a>.
+  </p>
+
   <p>And if you're going to be developing Ubiquity itself, check out our <a
     href="feed.html#core-developer-commands.html">core developer
     commands</a>.</p>
