Added a builtin command to go to the support page.

--- a/ubiquity/chrome/content/support.html
+++ b/ubiquity/chrome/content/support.html
@@ -19,7 +19,7 @@
 
   <br clear="all"/>
   <div style="text-align:center;">
-    <p>You can get to this page at any time using the "command that doesn't exist" command.</p>
+    <p>You can get to this page at any time using the "get support" command.</p>
   </div>
   <br clear="all"/>
 
