--- a/ubiquity/chrome/content/playpen.html
+++ b/ubiquity/chrome/content/playpen.html
@@ -2,7 +2,7 @@
   <head>
     <title>Ubiquity Parser 2 Playpen</title>
     <script type="text/javascript;version=1.8" charset='utf-8' src='resource://ubiquity/scripts/jquery.js'></script>
-    <script type="text/javascript;version=1.8" charset='utf-8' src='setup.js'></script>
+    <script type="text/javascript;version=1.8" charset='utf-8' src='playpen.js'></script>
     <style type="text/css">
 			body {
 				background-color: #ddd;
