i18n: moved localizations to new ubiquity/localzation directory, organized by language code subdirectories.
--HG--
rename : ubiquity/standard-feeds/localization/calendar.pot => ubiquity/localization/calendar.pot
rename : ubiquity/standard-feeds/localization/firefox.pot => ubiquity/localization/firefox.pot
rename : ubiquity/standard-feeds/localization/general.pot => ubiquity/localization/general.pot
rename : ubiquity/standard-feeds/localization/image.pot => ubiquity/localization/image.pot
rename : ubiquity/standard-feeds/localization/calendar.ja.po => ubiquity/localization/ja/calendar.po
rename : ubiquity/standard-feeds/localization/firefox.ja.po => ubiquity/localization/ja/firefox.po
rename : ubiquity/standard-feeds/localization/general.ja.po => ubiquity/localization/ja/general.po
rename : ubiquity/standard-feeds/localization/image.ja.po => ubiquity/localization/ja/image.po
rename : ubiquity/standard-feeds/localization/map.pot => ubiquity/localization/map.pot
rename : ubiquity/standard-feeds/localization/pageedit.ja.po => ubiquity/localization/pageedit.po
rename : ubiquity/standard-feeds/localization/pageedit.pot => ubiquity/localization/pageedit.pot
rename : ubiquity/standard-feeds/localization/social.pot => ubiquity/localization/social.pot

--- a/ubiquity/chrome/content/localization-template.html
+++ b/ubiquity/chrome/content/localization-template.html
@@ -23,7 +23,7 @@
   <div style="text-align:center;">
     <!--<p>You can get to this page at any time using the "command-list" command.</p>-->
     <p>
-      This is a template for <code><span class="feedKey"></span>.xx.po</code>
+      This is a template for <code><span class="feedKey"></span>.po</code>
       |
       <a id="show-hide-cmdlist-help" onclick=""></a>
     </p>
@@ -32,7 +32,7 @@
 <div id="cmdlist-help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
   <ul>
   <li>This is a localization template for the <span class="feedKey"></span> command feed in <code>.po</code> (portable object) format. Learn more about the <code>gettext po</code> format <a href='http://en.wikipedia.org/wiki/Gettext'>on Wikipedia</a>. There are links to some <code>po</code>-editing files there as well.</li>
-  <li>To test this localization, save it in <code><span class='localization-dir'></span></code> with the name <code><span class="feedKey"></span>.xx.po</code>, where <code>xx</code> is replaced by your language code.</li>
+  <li>To test this localization, save it in <code><span class='localization-dir'></span></code> with the name <code><span class="feedKey"></span>.po</code>, where <code>xx</code> is replaced by your language code.</li>
   </ul>
 </div>
 
