settings: refer to Parser 2 as "Parser 2 (next generation parser)" as all the documentation says "Parser 2"

--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -63,11 +63,11 @@
     <script> PrefKeys.onLoad() </script>
 
     <h2>Language Settings</h2>
-    <p>The Next Generation parser is experimental and will not work with all
+    <p>Parser 2 is Ubiquity's experimental next-generation parser and will not work with all
     commands.  However, it supports multiple languages.</p>
     <p><input type="checkbox" id="use-new-parser-checkbox"
                onchange="changeLanguageSettings();">
-    <strong>Use the Next Generation Parser</strong></p>
+    <strong>Use Parser 2 (the next generation parser)</strong></p>
     <p><span id="lang-settings-changed-info"></span></p>
     <p>Language:
       <select id="language-select" disabled="true"
