Updated version number string to 0.5alpha.  Updated release notes link on about:ubiquity page to match.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -63,7 +63,7 @@
 
   <p><strong>Help us</strong>. Subscribe to the <a href="https://ubiquity.mozilla.com/herd/command-feed/">Herd</a>, which will add your data to the <a href="https://ubiquity.mozilla.com/herd">dashboard</a></a>&mdash;it's completely anonymous and will help us make Ubiquity better and safer.</p>
 
-  <p>For information about the goals of the upcoming 0.2 release of Ubiquity, check out our <a href="https://wiki.mozilla.org/Labs/Ubiquity/0.2_Design:_UI_and_Security_Extensibility">design document</a>. It has diagrams!</p>
+  <p>For information about the goals of the Ubiquity project and our plans for upcoming releases, check out our <a href="https://wiki.mozilla.org/Labs/Ubiquity/Roadmap">Roadmap</a>.</p>
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.</p>
 
 
@@ -71,7 +71,7 @@
   <h2>Thanks for trying out Ubiquity <span
   class="version"></span>!</h2>
 
-  <p>Version 0.1.8 of Ubiquity is a maintenance release that fixes a number of bugs.  To learn about what's new, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.8_Release_Notes">Ubiquity 0.1.8 Release Notes</a>.</p>
+  <p>Version 0.5 of Ubiquity adds internationalization, smarter suggestions, a new tutorial, and more.  To learn about what's new, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5_Release_Notes">Ubiquity 0.5 Release Notes</a>.</p>
 
 
 </div>
