--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -234,6 +234,8 @@ CmdUtils.CreateCommand({
   ],
   icon: "chrome://ubiquity/skin/icons/search.png",
   description: "Search using your installed search engines",
+  help: "Specify any Open Search engine you have installed by entering " +
+        "e.g. 'search with google', 'search with yahoo', etc.",
   preview: function(previewBlock, args) {
     var instrument = args.instrument;
     if (instrument && instrument.data) {
@@ -268,6 +270,8 @@ CmdUtils.makeSearchCommand({
   url: "http://www.google.com/search?q={QUERY}",
   icon: "http://www.google.com/favicon.ico",
   description: "Searches Google for your words.",
+  help: "You can use the keyboard shortcut ctrl + alt + number to open one " +
+        "of the Google results shown in the preview.",
   preview: function(pblock, {object}) {
     var searchTerm = object.text;
     // Don't even display any text before fetching search results,
@@ -439,7 +443,8 @@ CmdUtils.makeSearchCommand({
   names: ["IMDB", "internet movie database", "movie", "actor"],
   url: "http://www.imdb.com/find?s=all&q={QUERY}&x=0&y=0",
   icon: "http://i.imdb.com/favicon.ico",
-  description: "Searches the Internet Movie Database for your words."
+  description: "Searches the Internet Movie Database (www.imdb.com) for " + 
+               "your words."
 });
 
 CmdUtils.makeSearchCommand({
@@ -732,7 +737,7 @@ CmdUtils.makeSearchCommand({
   names: ["YouTube"],
   url: "http://www.youtube.com/results?search_type=search_videos&search_sort=relevance&search_query={QUERY}&search=Search",
   icon: "http://www.youtube.com/favicon.ico",
-  description: "Searches <a href=\"http://www.youtube.com\">YouTube</a> for videos matching your words.",
+  description: "Searches <a href=\"http://www.youtube.com\">YouTube</a> for videos matching your words. Previews the top results.",
   preview: function(pblock, {object}){
     var searchTerm = object.text;
     pblock.innerHTML = "Searches Youtube for <b>" + object.summary + "</b>";
@@ -771,7 +776,7 @@ CmdUtils.makeSearchCommand({
   names: ["Flickr", "images"],
   url: "http://www.flickr.com/search/?q={QUERY}&w=all",
   icon: "http://www.flickr.com/favicon.ico",
-  description: "Searches <a href=\"http://www.flickr.com\">Flickr</a> for pictures matching your words.",
+  description: "Searches <a href=\"http://www.flickr.com\">Flickr</a> for pictures matching your words.  Previews the top pictures.",
   preview : function(previewBlock, {object}){
     var inputText = object.text;
 
@@ -890,7 +895,7 @@ CmdUtils.CreateCommand({
     {role: "location", nountype: noun_type_async_address}
   ],
   icon: "http://www.yelp.com/favicon.ico",
-  description: "Searches <a href=\"http://www.yelp.com\">Yelp</a> for restaurants matching your words.",
+  description: "Searches <a href=\"http://www.yelp.com\">Yelp</a> for restaurants matching your words.  Previews the top results.",
   help: "You can search for restaurants near a certain location using the <i>near</i> modifier.  For example, try &quot;yelp pizza near boston&quot;.",
   execute: function( args ) {
     var object = args.object;
@@ -985,8 +990,11 @@ CmdUtils.CreateCommand({
   arguments: {location: noun_type_geolocation,
               format: noun_type_temperature_units},
   icon: "http://www.wunderground.com/favicon.ico",
-  description: "Checks the weather for a given location.",
-  help: "Try issuing &quot;weather near chicago&quot;.  It works with zip-codes, too.",
+  description: "Checks the weather for a given location. It detects your " +
+               "current location as a default.",
+  help: "Try issuing &quot;weather near chicago&quot;.  It works with " +
+        "zip-codes, too.  You can add 'in celsius' or 'in farenheit' to " +
+        "specify the temperature scale.
   execute: function( {location} ) {
     location = location.text;
     var url = "http://www.wunderground.com/cgi-bin/findweather/getForecast?query=";
@@ -1076,7 +1084,7 @@ function defineWord(word, callback) {
 
 CmdUtils.CreateCommand({
   names: ["define", "get definition"],
-  description: "Gives the meaning of a word.",
+  description: "Gives the meaning of a word, using answers.com.",
   help: "Try issuing &quot;define aglet&quot;",
   icon: "http://www.answers.com/favicon.ico",
   arguments: [{role: "object",
