Fixed weather command help -- this was breaking search feed.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -994,7 +994,7 @@ CmdUtils.CreateCommand({
                "current location as a default.",
   help: "Try issuing &quot;weather near chicago&quot;.  It works with " +
         "zip-codes, too.  You can add 'in celsius' or 'in farenheit' to " +
-        "specify the temperature scale.
+        "specify the temperature scale.",
   execute: function( {location} ) {
     location = location.text;
     var url = "http://www.wunderground.com/cgi-bin/findweather/getForecast?query=";
