settings: Added "Miscellaneous Settings" and made the max number of suggestions configurable in it.

--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -75,8 +75,14 @@
       </select>
     </p>
 
+    <h2>Miscellaneous Settings</h2>
+    <p>
+     Max Number of Suggestions:
+     <input type="text" id="max-suggestions" size="2"
+      style="text-align:center"/>
+    </p>
+  </div>
   <br clear="all"/>
-
   <div id="editor-div" style="display:none">
     <h2>Custom Skin Editor</h2>
     <ul class="button-list">
